src/app/shared/components/competency-builder/competency-builder.component.scss
@import "vars";

/* Clear floats after the columns */
.competency-builder_container {
  display: flex;
  flex-direction: column;

  .competency-builder_builder {
    display: flex;
    flex-direction: row;

    .column {
      height: fit-content;

    }

    .left {
      color: white;
      position: relative;
      padding-top: 30px;
    }

    .right {
      display: flex;
      flex-direction: column;
      justify-content: space-between;
      height: 450px;
      padding: 30px 20px 0 20px;
      overflow-y: auto;

      border-left: 1px solid #C6CBD2;


      .content {
        margin-bottom: 90px;
      }


      .competency-builder_form-buttons {
        display: flex;
        justify-content: space-between;
        position: fixed;
        bottom: 0px;
        padding: 20px 0;
        width: 585px;
        background-color: white;
        z-index: 3;

        .review,
        .delete {
          padding: 15px 20px;
          color: #454545;
          background-color: #f7f7f7;
          border: 1px solid #C6CBD2;
          border-radius: 4px;

          &:hover {
            cursor: pointer;
          }
        }

        .next,
        .submit {
          padding: 15px 20px;
          color: #f7f7f7;
          background-color: #376ED6;
          box-shadow: 0px 6px 12px -6px #376ED6;
          border-radius: 4px;
          border: none;
          margin-left: 30px;

          &:hover {
            cursor: pointer;
            transform: scale(1.025);
            transition: all .15s ease-out;
          }

        }

        .back {
          background-color: transparent;
          border: none;
          height: fit-content;
          align-self: center;
          display: flex;
          border-radius: 0;

          .fa-arrow-left {
            margin-right: 7px;
          }
        }

        .hidden {
          visibility: hidden;
        }

        .back:hover {
          cursor: pointer;
          border-bottom: 1px solid #454545;
        }
      }
    }
  }

  .competency-builder_control {
    background-color: #EFEFEF;
    padding: 10px 20px;

    .header {
      size: 18px;
      font-weight: 600;
    }
  }
}

.competency-loading {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;

  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;

  $color: #535d69;
  font-size: 15pt;
  padding: 20px;

  .svg-inline--fa {
    color: #1c70dd;
    font-size: 19.5pt;
    margin-bottom: 20px;
  }
}

